<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="horizontal" >
  	
  	<ImageView android:id="@+id/update_image" 
        	android:layout_width="wrap_content"    
            android:layout_height="fill_parent"
            android:scaleType="center"
            android:src="@drawable/ota_update"
            android:contentDescription="@string/downloading" /> 
  	    
    <LinearLayout 
    	android:layout_width="match_parent"
  		android:layout_height="wrap_content" 
  		android:orientation="vertical" >
  		  		       
  		<TextView android:id="@+id/pb_title"
  	    	android:layout_width="match_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/pb_title_downloading"
  			android:textColor="#FFFFFFFF"
  			android:textSize="16dip"
  			android:singleLine="true" />
  		<LinearLayout 
    		android:layout_width="match_parent"
  			android:layout_height="wrap_content" 
  			android:gravity="center"
  			android:orientation="horizontal" >
  			<ImageView android:id="@+id/image_pause"
  			    android:src="@drawable/ota_pause"
  			    android:visibility="gone"
  			    android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:contentDescription="@string/stoping"/>
  			<TextView android:id="@+id/pb_percent"
  			    android:paddingLeft="2dip"
  			    android:paddingRight="2dip"
  	    		android:layout_width="wrap_content"
  				android:layout_height="wrap_content"/>
			<ProgressBar android:id="@+id/pb_download" 
            	android:layout_width="match_parent" 
           	 	android:layout_height="wrap_content" 
            	style="?android:attr/progressBarStyleHorizontal"
            	android:layout_gravity="center_vertical" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
