<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:scaleType="fitXY"
        android:src="@drawable/setting_line_top" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
    	android:layout_marginTop="20dp"
    	android:background="@drawable/setting_top_bg"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/current_version"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_version"
        android:layout_below="@+id/txt_version"
        android:layout_marginTop="82dp"
        android:text="@string/product_model"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/btn_check_now"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="140dp"
        android:src="@drawable/setting_check_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_check_now"
        android:layout_toLeftOf="@+id/btn_check_now"
        android:layout_marginRight="10dp"
        android:text="@string/check_now"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="92dp"
        android:src="@drawable/setting_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_centerVertical="true"
        android:minHeight="400dp"
        android:scaleType="fitXY"
        android:src="@drawable/setting_line" />

</RelativeLayout>